--- a/.github/workflows/sc-sast.yml
+++ b/.github/workflows/sc-sast.yml
@@ -1,12 +1,12 @@
 name: Fortify ScanCentral SAST Scan
 on:
   workflow_dispatch:
-  push:
-    # Master or main branch that you want to trigger this workflow for
-    branches: []
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [7.0-gh-fortify]
+#  push:
+#    # Master or main branch that you want to trigger this workflow for
+#    branches: []
+#  pull_request:
+#    # The branches below must be a subset of the branches above
+#    branches: [7.0-gh-fortify]
 
 
 jobs:
