--- a/.github/workflows/fod-static.yml
+++ b/.github/workflows/fod-static.yml
@@ -76,7 +76,7 @@ jobs:
           FOD_PAT: ${{ secrets.FOD_PAT }}
           FOD_RELEASE_ID: 958870
           FOD_UPLOADER_OPTS: "-ep 2 -pp 2 -I 1 -apf"
-          FOD_UPLOADER_NOTES: 'Triggered by GitHub Actions (${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})'
+          FOD_UPLOADER_NOTES: 'Triggered by: event = ${{ github.event_name}} / action = ${{ github.action }} / repository = ${{ github.repository }} / workflow = ${{ github.workflow }} / job = ${{ github.job }} / run = ${{ github.run_id }})'
 
       # Once scan completes, pull SAST issues from Fortify on Demand and generate SARIF output.
       - name: Export results to GitHub-optimized SARIF
