--- a/.github/workflows/fod-static.yml
+++ b/.github/workflows/fod-static.yml
@@ -22,8 +22,11 @@ name: Fortify on Demand SAST Scan
 on:
   workflow_dispatch:
   push:
+    branches:
+      - github/feat*/*
   pull_request:
-
+    branches:
+      - github/main
 jobs:
   FoD-SAST-Scan:
     # Use the appropriate runner for building your source code.
