--- a/.github/workflows/fod-static.yml
+++ b/.github/workflows/fod-static.yml
@@ -67,10 +67,10 @@ jobs:
       # TODO: Update ENV variables for your application and create the necessary GitHub Secrets.  Helpful hints:
       #   Credentials and release ID should be obtained from your FoD tenant (either Personal Access Token or API Key can be used).
       #   Automated Audit preference should be configured for the release's Static Scan Settings in the Fortify on Demand portal.
-#      - name: Download Fortify on Demand Universal CI Tool
-#        uses: fortify/gha-setup-fod-uploader@v1.1.3
+      - name: Download Fortify on Demand Universal CI Tool
+        uses: fortify/gha-setup-fod-uploader@v1.1.3
       - name: Perform SAST Scan
-        run: java -jar FodUpload.jar -z package.zip -aurl $FOD_API_URL -purl $FOD_URL -rid "$FOD_RELEASE_ID" -tc "$FOD_TENANT" -uc "$FOD_USER" "$FOD_PAT" $FOD_UPLOADER_OPTS -n "$FOD_UPLOADER_NOTES"
+        run: java -jar $FOD_UPLOAD_JAR -z package.zip -aurl $FOD_API_URL -purl $FOD_URL -rid "$FOD_RELEASE_ID" -tc "$FOD_TENANT" -uc "$FOD_USER" "$FOD_PAT" $FOD_UPLOADER_OPTS -n "$FOD_UPLOADER_NOTES"
         env:
           FOD_URL: ${{ secrets.FOD_URL }}
           FOD_API_URL: ${{ secrets.FOD_API_URL }}
