--- a/.github/workflows/fortify-scan.yml
+++ b/.github/workflows/fortify-scan.yml
@@ -18,20 +18,8 @@ jobs:
     env:
       APPLICATION: "${{ github.event.repository.name }}"
       VERSION: "${{ github.ref_name }}"
-
       # Requires GitHub Advanced Security
       PUBLISH_SECURITY_ALERTS: false
-
-      IQ_URL: ${{ vars.IQ_URL }}
-      IQ_USERNAME: ${{ secrets.IQ_USERNAME }}
-      IQ_PASSWORD: ${{ secrets.IQ_PASSWORD }}
-      IQ_APP: "petclinic_gh"
-      IQ_STAGE: "build"
-      IQ_BUILD_OPTS: ""
-      #      IQ_BUILD_OPTS: "mvn dependency:copy-dependencies"
-      IQ_TARGET: "pom.xml"
-
-      SHA: "${{ github.run_id }}"
     steps:
       # Check out source code
       - name: Checkout repository
@@ -54,9 +42,10 @@ jobs:
           ssc_base_url: ${{ vars.FTFY_SSC_BASE_URL}}
           ssc_app: ${{ env.APPLICATION }}
           ssc_version: ${{ env.VERSION }}
-          ssc_ci_token: ${{ secrets.FTFY_CI_TOKEN_ENC }}
-          #          ssc_ci_username: ${{ secrets.FTFY_CI_USERNAME }}
-          #          ssc_ci_password:  ${{ secrets.FTFY_CI_PASSWORD }}
+          ssc_source_version: "github/main"
+#          ssc_ci_token: ${{ secrets.FTFY_CI_TOKEN_ENC }}
+          ssc_ci_username: ${{ secrets.FTFY_CI_USERNAME }}
+          ssc_ci_password:  ${{ secrets.FTFY_CI_PASSWORD }}
           sast_scan: true
           sast_client_auth_token: ${{ secrets.FTFY_SAST_CLIENT_TOKEN }}
           sast_build_options: "-bt none"
