--- a/.github/workflows/github-dev.yaml
+++ b/.github/workflows/github-dev.yaml
@@ -10,29 +10,38 @@ on:
     # The branches below must be a subset of the branches above
 
 jobs:
-  Fortif-SAST:
+  # Fortif-SAST:
+  #   runs-on: self-hosted
+  #   container:
+  #     image: maven
+  #   permissions: write-all
+  #   # env:
+  #     # APPLICATION: "${{ github.event.repository.name }}"
+  #     # VERSION: "${{ github.ref_name }}"
+
+  #     # Requires GitHub Advanced Security
+  #     # PUBLISH_SECURITY_ALERTS: false
+  #   steps:
+  #     - run: env
+  #       shell: bash
+  #     - name: Checkout
+  #       id: checkout
+  #       uses: actions/checkout@v4
+  #     - name: Run ScanCentral SAST Scan
+  #       uses: alex-gendry/github-action/sc-sast-scan@feat/create-app-version
+  #       with:
+  #         sast-scan: true
+  #       env:
+  #         SSC_URL: ${{vars.FTFY_SSC_BASE_URL}}
+  #         SSC_TOKEN: ${{secrets.FTFY_CI_TOKEN_ENC}}
+  #         SC_SAST_TOKEN: ${{secrets.FTFY_SAST_CLIENT_TOKEN}}
+  #         DO_WAIT: true
+  summary:
     runs-on: self-hosted
     container:
-      image: maven
+      image: docker.prod.ekseed.org/fcli:dev
     permissions: write-all
-    # env:
-      # APPLICATION: "${{ github.event.repository.name }}"
-      # VERSION: "${{ github.ref_name }}"
-
-      # Requires GitHub Advanced Security
-      # PUBLISH_SECURITY_ALERTS: false
     steps:
-      - run: env
+      - run: ./fcli --version
         shell: bash
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v4
-      - name: Run ScanCentral SAST Scan
-        uses: alex-gendry/github-action/sc-sast-scan@feat/create-app-version
-        with:
-          sast-scan: true
-        env:
-          SSC_URL: ${{vars.FTFY_SSC_BASE_URL}}
-          SSC_TOKEN: ${{secrets.FTFY_CI_TOKEN_ENC}}
-          SC_SAST_TOKEN: ${{secrets.FTFY_SAST_CLIENT_TOKEN}}
-          DO_WAIT: true
+    
