--- a/.github/workflows/github-dev.yaml
+++ b/.github/workflows/github-dev.yaml
@@ -46,7 +46,6 @@ jobs:
     permissions: write-all
     steps:
       - run: |
-          echo $PATH
-          fcli --version
+          fcli ssc summary generate >> $GITHUB_STEP_SUMMARY
         shell: bash
     
